kubernetes/apps/gotify/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: apps
  labels:
    app.kubernetes.io/name: gotify
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: gotify
