kubernetes/apps/gotify/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`gotify.woitzik.dev`)
    kind: Rule
    middlewares: [{name: crowdsec-bouncer}, {name: authelia}]
    services: [{name: gotify, port: 80}]
  tls: {secretName: wildcard-woitzik-dev-tls}
